[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.22.0"
edition = "2024"
repository = "https://github.com/henryhchchc/mokapot"
license = "MIT"
keywords = ["analysis", "bytecode", "java", "jvm"]
categories = ["development-tools", "parsing"]

[workspace.dependencies]
bitflags = "2.10.0"
cesu8 = "1.1.0"
clap = "4.5.50"
derive_more = "2.0.1"
document-features = "0.2.12"
glob = "0.3.3"
instability = "0.3.9"
itertools = "0.14.0"
num-traits = "0.2.19"
petgraph = "0.8.3"
proptest = "1.9.0"
proptest-derive = "0.7.0"
rand = "0.9.2"
rayon = "1.11.0"
thiserror = "2.0.17"
trait-gen = "2.0.6"
walkdir = "2.5.0"
zip = { version = "7.0.0", default-features = false }

[profile.integration-test]
inherits = "test"
opt-level = 3
lto = true
