[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.24.1"
edition = "2024"
repository = "https://github.com/henryhchchc/mokapot"
license = "MIT"
keywords = ["analysis", "bytecode", "java", "jvm"]
categories = ["development-tools", "parsing"]

[workspace.dependencies]
bitflags = "2.10"
cesu8 = "1.1"
clap = "4.5"
derive_more = "2.0"
document-features = "0.2"
glob = "0.3"
instability = "0.3"
itertools = "0.14"
num-traits = "0.2"
petgraph = "0.8"
proptest = "1.9"
proptest-derive = "0.7"
rand = "0.9"
rayon = "1.11"
thiserror = "2.0"
trait-gen = "2.0"
walkdir = "2.5"
zip = { version = "7.0", default-features = false }

[profile.integration-test]
inherits = "test"
opt-level = 3
lto = true
