[package]
name = "mokapot"
version.workspace = true
edition.workspace = true
description = "A library for analyzing and manipulating JVM bytecode"
documentation = "https://docs.rs/mokapot"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = "2.10.0"
cesu8 = "1.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
document-features = "0.2.12"
instability = "0.3.9"
itertools = "0.14.0"
num-traits = "0.2.19"
petgraph = { version = "0.8.3", optional = true }
thiserror = "2.0.17"
trait-gen = "2.0.6"
walkdir = "2.5.0"
zip = { version = "6.0.0", default-features = false, features = [
  "deflate",
], optional = true }

[dev-dependencies]
clap = { version = "4.5.50", features = ["derive"] }
mokapot = { path = ".", features = ["unstable"] }
proptest = "1.9.0"
proptest-derive = "0.7.0"
rand = "0.9.2"
rayon = "1.11.0"
walkdir = "2.5.0"

[build-dependencies]
glob = "0.3.3"

[features]
default = ["jar", "petgraph"]
## Enables loading classes from `.jar` files
jar = ["dep:zip"]
## Enables the analyses of control flow graphs with `petgraph`.
petgraph = ["dep:petgraph"]
#! ### Experimental APIs
#!
#! The following features are experimental and the APIs are unstable.
#! The APIs provided by these features may undergo breaking changes from time to time.
## All the experimental APIs
unstable = [
  "unstable-bytecode-generation",
  "unstable-fixed-point-analyses",
  "unstable-moka-ir",
  "unstable-project-analyses",
]
## Generate JVM bytecode from MokaPot data structures.
unstable-bytecode-generation = []
## Fixed-point analysis framework
unstable-fixed-point-analyses = []
## Moka IR. A register-based, SSA intermediate representation.
unstable-moka-ir = []
## Project-wide analyses APIs
unstable-project-analyses = []
