[package]
name = "mokapot"
version.workspace = true
edition.workspace = true
description = "A library for analyzing and manipulating JVM bytecode"
documentation = "https://docs.rs/mokapot"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = { workspace = true }
cesu8 = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
document-features = { workspace = true }
instability = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true, optional = true }
thiserror = { workspace = true }
trait-gen = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true, features = ["deflate"], optional = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
mokapot = { path = ".", features = ["unstable"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }

[build-dependencies]
glob = { workspace = true }

[features]
default = ["jar", "petgraph"]
## Enables loading classes from `.jar` files
jar = ["dep:zip"]
## Enables the analyses of control flow graphs with `petgraph`.
petgraph = ["dep:petgraph"]
#! ### Experimental APIs
#!
#! The following features are experimental and the APIs are unstable.
#! The APIs provided by these features may undergo breaking changes from time to time.
## All the experimental APIs
unstable = [
  "unstable-bytecode-generation",
  "unstable-fixed-point-analyses",
  "unstable-moka-ir",
  "unstable-project-analyses",
]
## Generate JVM bytecode from MokaPot data structures.
unstable-bytecode-generation = []
## Fixed-point analysis framework
unstable-fixed-point-analyses = []
## Moka IR. A register-based, SSA intermediate representation.
unstable-moka-ir = []
## Project-wide analyses APIs
unstable-project-analyses = []
